--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -718,11 +718,6 @@ video {
   border-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
 
-.border-pink-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(244, 114, 182, var(--tw-border-opacity));
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
@@ -738,11 +733,6 @@ video {
   background-color: rgba(252, 231, 243, var(--tw-bg-opacity));
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -751,6 +741,11 @@ video {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .px-6 {
@@ -770,9 +765,65 @@ video {
   padding-top: 0.25rem;
 }
 
+.font-body {
+  font-family: "Open Sans", Arial, sans-serif;
+}
+
+.font-logo {
+  font-family: Roboto, Arial, sans-serif;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
+}
+
+.text-\[30px\] {
+  font-size: 30px;
+}
+
+.text-\[28px\] {
+  font-size: 28px;
+}
+
+.font-black {
+  font-weight: 900;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-thin {
+  font-weight: 100;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-pink-500 {
@@ -793,11 +844,6 @@ video {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-
-.text-pink-100 {
-  --tw-text-opacity: 1;
-  color: rgba(252, 231, 243, var(--tw-text-opacity));
 }
 
 .drop-shadow-md {
@@ -823,18 +869,6 @@ video {
   transition-duration: 200ms;
 }
 
-.duration-100 {
-  transition-duration: 100ms;
-}
-
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
-.hover\:border-b-2:hover {
-  border-bottom-width: 2px;
-}
-
 .hover\:border-gold-light:hover {
   --tw-border-opacity: 1;
   border-color: rgba(255, 215, 0, var(--tw-border-opacity));
@@ -843,16 +877,6 @@ video {
 .hover\:border-pink-500:hover {
   --tw-border-opacity: 1;
   border-color: rgba(236, 72, 153, var(--tw-border-opacity));
-}
-
-.hover\:border-pink-400:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(244, 114, 182, var(--tw-border-opacity));
-}
-
-.hover\:py-3:hover {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .hover\:text-pink-400:hover {
@@ -868,19 +892,4 @@ video {
 .group:hover .group-hover\:text-pink-500 {
   --tw-text-opacity: 1;
   color: rgba(236, 72, 153, var(--tw-text-opacity));
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark\:h-2 {
-    height: 0.5rem;
-  }
-
-  .dark\:h-20 {
-    height: 5rem;
-  }
-
-  .dark\:text-green-700 {
-    --tw-text-opacity: 1;
-    color: rgba(4, 120, 87, var(--tw-text-opacity));
-  }
 }
