--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -721,6 +721,10 @@ video {
   height: 5000px;
 }
 
+.h-9 {
+  height: 2.25rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -1149,6 +1153,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-extrabold {
